scrollBars fix

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -220,7 +220,6 @@ body,
   .chat_messages {
     height: calc(100% - 99px);
     width: 100%;
-    overflow-y: scroll;
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
